--- a/payments/cn/guides/payment-link.mdx
+++ b/payments/cn/guides/payment-link.mdx
@@ -85,33 +85,29 @@ sequenceDiagram
 
 ### 应付金额计算
 
-创建订单支付链接时，您需要指定商品订单金额、开发者费用等关键参数。付款方进入支付页面后，可自行选择支付所用的币种和链。系统会结合您的设置与付款方的选择，自动计算出对应的应付金额，并在界面上实时展示。应付金额的计算方式如下：
+创建订单支付链接时，您需要指定订单金额、开发者费用等关键参数。付款方进入支付页面后，可自行选择支付所用的币种和链。系统会结合您的设置与付款方的选择，自动计算出对应的应付金额，并在界面上实时展示。您也可以直接指定各种加密货币的应付金额。
 
-**应付金额** = **（商品订单金额 + 开发者费用）** / **汇率**
-
-- **应付金额**：付款方实际需支付的加密货币金额。
-- **商品订单金额**：您在创建订单支付链接时传入的 `order_amount` 字段。
-- **开发者费用**：您在创建订单时传入的 `fee_amount` 字段。如果您是服务多个下游商户的平台机构，需要在您和下游商户之间分配收入，可以通过设置该费用来实现。开发者费用和商品订单金额之间的比例决定了您和下游商户之间的收入分成比例。更多信息请参考[资金分配与余额管理](/payments/cn/guides/amounts-and-balances)。
+- **订单金额**（`pricing_amount`）：订单金额，不包括开发者费用。
+  - 如果设置了 `pricing_currency`，订单金额以该法币计价。
+  - 如果未设置 `pricing_currency`，订单金额以 `payable_currency` 指定的加密货币计价。
+- **开发者费用**（`fee_amount`）：如果您是服务多个下游商户的平台机构，需要在您和下游商户之间分配收入，可以通过设置该费用来实现。开发者费用和订单金额之间的比例决定了您和下游商户之间的收入分成比例。更多信息请参考[资金分配与余额管理](/payments/cn/guides/amounts-and-balances)。
   <Info>如果您是商户（直接服务于付款方），通常无需设置开发者费用。</Info>
-- **汇率**：
-    - 如果您设置了 `custom_exchange_rates` 字段，则汇率为 `custom_exchange_rates` 字段值。
-    - 如果您未设置 `custom_exchange_rates` 字段，则系统会采用您设置的 `currency`（订单金额计价币种）与付款方实际选择的加密货币之间的实时汇率。该汇率以付款方下单时调用 [Get exchange rate](/payments/en/api-references/payment/get-exchange-rate) 返回的汇率为准。
-  
-
-下表展示了在四种不同设置下，系统如何计算应付金额：
+- **应付金额**（`payable_amounts`）：付款方实际需支付的加密货币金额，以 `payable_currency` 指定的加密货币为单位。该字段为可选字段：
+  - 如果您指定了 `payable_amounts`，则系统直接使用这些值作为各种加密货币的应付金额。
+  - 如果您未指定 `payable_amounts`，系统将使用实时汇率计算：**应付金额 =（订单金额 + 开发者费用）/ 汇率**。汇率以创建订单时调用 [Get exchange rate](/payments/en/api-references/payment/get-exchange-rate) 操作返回的汇率为准。
 
 
 |  | 场景 1 | 场景 2 | 场景 3 | 场景 4 |
 | :-- | :-- | :-- | :-- | :-- |
-| 场景描述 | - 订单金额以法币计价<br></br>- 无需设置开发者费用<br></br>- 使用默认汇率 | - 订单金额以 USDT 计价<br></br>- 无需设置开发者费用<br></br>- 使用默认汇率  | - 订单金额以法币计价<br></br>- 设置开发者费用<br></br>- 使用自定义汇率 | - 订单金额以 USDT 计价<br></br>- 设置开发者费用<br></br>- 使用默认汇率 |
-| `order_amount` | `"100"` | `"100"` | `"100"` | `"100"` |
+| 场景描述 | - 订单金额以法币计价<br></br>- 无需设置开发者费用<br></br>- 系统计算应付金额 | - 订单金额以 USDT 计价<br></br>- 无需设置开发者费用<br></br>- 系统计算应付金额  | - 订单金额以法币计价<br></br>- 设置开发者费用<br></br>- 自定义应付金额 | - 订单金额以 USDT 计价<br></br>- 设置开发者费用<br></br>- 系统计算应付金额 |
+| `pricing_amount` | `"100"` | `"100"` | `"100"` | `"100"` |
 | `fee_amount` | `"0"` 或不设置 | `"0"` 或不设置 | `"2"` | `"2"` |
-| `currency` | `"USD"` | `"USDT"` | `"USD"` | `"USDT"` |
+| `pricing_currency` | `"USD"` | 不设置 | `"USD"` | 不设置 |
 | 用户选择的币种 | `"ETH_USDT"` | `"ETH_USDT"` | `"ETH_USDT"` | `"ETH_USDT"` |
-| `custom_exchange_rates` | 不设置 | 不设置 |     `{"token_id": "ETH_USDT", "exchange_rate": "0.98"}` | 不设置 |
-| 实时汇率 | 0.99 | 1 | 0.99 | 1 |
-| 计算过程 | (100 + 0) / 0.99 | (100 + 0) / 1 | (100 + 2) / 0.98 | (100 + 2) / 1 |
-| `payable_amount`（付款方最终应付的金额） | `"101.01"` | `"100"` | `"104.08"` | `"102"` |
+| `payable_amounts` | 不设置 | 不设置 | `[{"payable_currency": "ETH_USDT", "payable_amount": "104.08"}]` | 不设置 |
+| 实时汇率 | 0.99 | 1 | 不适用（使用自定义应付金额） | 1 |
+| 计算过程 | (100 + 0) / 0.99 | (100 + 0) / 1 | 直接使用指定的 payable_amounts | (100 + 2) / 1 |
+| 最终应付金额 | `"101.01"` | `"100"` | `"104.08"` | `"102"` |
 
 
 <Tip>欢迎您[提交反馈](https://forms.zohopublic.com/cobo/form/DocumentFeedbackForm/formperma/QvLOhxJv1_JMsJ-1dleZ8Itb_7rzN-LtgvsDdxosoVI)来帮助改进我们的文档！</Tip>
