--- a/payments/cn/guides/status-and-events.mdx
+++ b/payments/cn/guides/status-and-events.mdx
@@ -36,7 +36,7 @@ description: ""
 
 ### PaymentTransaction
 
-该数据结构包含了 [Get transaction information](/v2/api-references/transactions/get-transaction-information) 响应参数中的所有字段，此外还包含以下字段：
+该数据结构包含了 [Get transaction information](https://www.cobo.com/developers/v2/api-references/transactions/get-transaction-information) 响应参数中的所有字段，此外还包含以下字段：
 
   - `acquiring_type`: 收款类型。`Order` 表示订单模式，`TopUp` 表示充值模式。
   - `order_id`: 支付订单 ID。
