--- a/payments/en/guides/status-and-events.mdx
+++ b/payments/en/guides/status-and-events.mdx
@@ -39,7 +39,7 @@ This data structure includes the following fields:
 
 ### PaymentTransaction
 
-This data structure includes all fields in the response parameters of [Get transaction information](/v2/api-references/transactions/get-transaction-information), and also includes the following fields:
+This data structure includes all fields in the response parameters of [Get transaction information](https://www.cobo.com/developers/v2/api-references/transactions/get-transaction-information), and also includes the following fields:
 
   - `acquiring_type`: Payment collection type. `Order` indicates order mode, `TopUp` indicates top-up mode.
   - `order_id`: Pay-in order ID.
