--- a/payments/cn/guides/create-orders.mdx
+++ b/payments/cn/guides/create-orders.mdx
@@ -54,19 +54,16 @@ sequenceDiagram
 
 
 
-创建订单时，您需要指定商品订单金额、付款方支付所用的加密货币等信息，系统会根据这些信息计算出订单的应付金额（`payable_amount`）。应付金额的计算公式为：
+创建订单时，您需要指定订单金额、付款方支付所用的加密货币等信息。
 
-**应付金额** = **（商品订单金额 + 开发者费用）** / **汇率**
-
-- **应付金额**：付款方实际需支付的加密货币金额，以 `token_id` 指定的加密货币为单位。例如，若 `token_id` 为 `ETH_USDT`，则付款方需通过 ETH 链支付相应金额的 USDT。
-- **商品订单金额**：您在创建订单时传入的 `order_amount` 字段。
-- **开发者费用**：您在创建订单时传入的 `fee_amount` 字段。如果您是服务多个下游商户的平台机构，需要在您和下游商户之间分配收入，可以通过设置该费用来实现。开发者费用和商品订单金额之间的比例决定了您和下游商户之间的收入分成比例。更多信息请参考[资金分配与余额管理](/payments/cn/guides/amounts-and-balances)。
+- **订单金额**（`pricing_amount`）：订单金额，不包括开发者费用。
+  - 如果设置了 `pricing_currency`，订单金额以该法币计价。
+  - 如果未设置 `pricing_currency`，订单金额以 `payable_currency` 指定的加密货币计价。
+- **开发者费用**（`fee_amount`）：如果您是服务多个下游商户的平台机构，需要在您和下游商户之间分配收入，可以通过设置该费用来实现。开发者费用和订单金额之间的比例决定了您和下游商户之间的收入分成比例。更多信息请参考[资金分配与余额管理](/payments/cn/guides/amounts-and-balances)。
   <Info>如果您是商户（直接服务于付款方），通常无需设置开发者费用。</Info>
-- **汇率**：
-  - 如果您只设置了 `token_id` 字段，未设置 `currency` 字段，则商品订单金额和开发者费用都以 `token_id` 指定的加密货币为单位。此时的汇率固定为 1，无需进行换算。
-  - 如果您设置了 `currency` 字段，则商品订单金额和开发者费用都以 `currency` 指定的法币为单位。
-    - 如果您设置了 `custom_exchange_rate` 字段，则汇率为 `custom_exchange_rate` 字段值。
-    - 如果您未设置 `custom_exchange_rate` 字段，则汇率为 `currency` 指定的法币与 `token_id` 指定的加密货币之间的实时汇率，以创建订单时调用 [Get exchange rate](/payments/en/api-references/payment/get-exchange-rate) 操作返回的汇率为准。 
+- **应付金额**（`payable_amount`）：付款方实际需支付的加密货币金额，以 `payable_currency` 指定的加密货币为单位。该字段为可选字段：
+  - 如果您指定了 `payable_amount`，则系统直接使用该值作为付款方需支付的金额。
+  - 如果您未指定 `payable_amount`，系统将使用实时汇率计算：**应付金额 =（订单金额 + 开发者费用）/ 汇率**。汇率以创建订单时调用 [Get exchange rate](/payments/en/api-references/payment/get-exchange-rate) 操作返回的汇率为准。 
   
 
 下表展示了在四种不同设置下，系统如何计算应付金额：
@@ -74,15 +71,15 @@ sequenceDiagram
 
 |  | 场景 1 | 场景 2 | 场景 3 | 场景 4 |
 | :-- | :-- | :-- | :-- | :-- |
-| 场景描述 | - 订单金额以法币计价<br></br>- 无需设置开发者费用<br></br>- 使用默认汇率 | - 订单金额以加密货币计价<br></br>- 无需设置开发者费用<br></br>- 使用默认汇率  | - 订单金额以法币计价<br></br>- 设置开发者费用<br></br>- 使用自定义汇率 | - 订单金额以加密货币计价<br></br>- 设置开发者费用<br></br>- 使用默认汇率 |
-| `order_amount` | `"100"` | `"100"` | `"100"` | `"100"` |
+| 场景描述 | - 订单金额以法币计价<br></br>- 无需设置开发者费用<br></br>- 系统计算应付金额 | - 订单金额以加密货币计价<br></br>- 无需设置开发者费用<br></br>- 系统计算应付金额  | - 订单金额以法币计价<br></br>- 设置开发者费用<br></br>- 自定义应付金额 | - 订单金额以加密货币计价<br></br>- 设置开发者费用<br></br>- 系统计算应付金额 |
+| `pricing_amount` | `"100"` | `"100"` | `"100"` | `"100"` |
 | `fee_amount` | `"0"` 或不设置 | `"0"` 或不设置 | `"2"` | `"2"` |
-| `currency` | `"USD"` | 不设置 | `"USD"` | 不设置 |
-| `token_id` | `"ETH_USDT"` | `"ETH_USDT"` | `"ETH_USDT"` | `"ETH_USDT"` |
-| `custom_exchange_rate` | 不设置 | 不设置 | `"0.98"` | 不设置 |
-| 实时汇率 | 0.99 | 1 | 0.99 | 1 |
-| 计算过程 | (100 + 0) / 0.99 | (100 + 0) / 1 | (100 + 2) / 0.98 | (100 + 2) / 1 |
-| `payable_amount`（付款方最终应付的金额） | `"101.01"` | `"100"` | `"104.08"` | `"102"` |
+| `pricing_currency` | `"USD"` | 不设置 | `"USD"` | 不设置 |
+| `payable_currency` | `"ETH_USDT"` | `"ETH_USDT"` | `"ETH_USDT"` | `"ETH_USDT"` |
+| `payable_amount` | 不设置 | 不设置 | `"104.08"` | 不设置 |
+| 实时汇率 | 0.99 | 1 | 不适用（使用自定义应付金额） | 1 |
+| 计算过程 | (100 + 0) / 0.99 | (100 + 0) / 1 | 直接使用指定的 payable_amount | (100 + 2) / 1 |
+| 最终应付金额 | `"101.01"` | `"100.00"` | `"104.08"` | `"102.00"` |
 
 
 </Tab>
