--- a/payments/cn/guides/merchants.mdx
+++ b/payments/cn/guides/merchants.mdx
@@ -15,7 +15,7 @@ lang: "zh-hans"
 
 Cobo 为您维护两类资金的收支记录：**商户资金**与**开发者资金**。当付款方完成支付后，系统会根据该笔支付关联的商户及其开发者费率，自动将资金分配至对应的商户余额和开发者余额。
 
-<Info>有关资金分配机制的更详细介绍，请参考[资金分配与余额管理](/payments/cn/guides/amounts-and-balances)。</Info>
+<Info>有关资金分配机制的更详细介绍，请参考[账户与资金分配](/payments/cn/guides/amounts-and-balances)。</Info>
 
 
 ```mermaid
@@ -82,7 +82,7 @@ graph TD
 
 - 创建商户：具体的商户创建和配置步骤请参考[开发环境前置准备](/payments/cn/guides/preparation#merchants)。
 
-- 开发者费率设置：不同收款模式有不同的配置方式。关于费率配置和资金流向的详细说明，请参考[资金分配与余额管理](/payments/cn/guides/amounts-and-balances)。
+- 开发者费率设置：不同收款模式有不同的配置方式。关于费率配置和资金流向的详细说明，请参考[账户与资金分配](/payments/cn/guides/amounts-and-balances)。
 
 
 
