--- a/payments/cn/guides/overview.mdx
+++ b/payments/cn/guides/overview.mdx
@@ -46,7 +46,7 @@ Cobo 支付解决方案的整体业务流程如下：
 如果您是支付服务提供商（PSP）、电商平台或其他需要为下游商户提供支付服务的机构，除了需要了解常规的收款、资金转出等流程外，还需要进行商户管理和资金结算等操作：
 
 - [商户管理](/payments/cn/guides/merchants)：了解商户管理功能的适用场景、核心优势以及商户创建与配置流程
-- [资金分配与余额管理](/payments/cn/guides/amounts-and-balances)：了解商户与开发者之间的资金分配规则、余额计算方式以及退款处理机制
+- [账户与资金分配](/payments/cn/guides/amounts-and-balances)：了解商户与开发者之间的资金分配规则、余额计算方式以及退款处理机制
 
 
 
