--- a/payments/en/guides/merchants.mdx
+++ b/payments/en/guides/merchants.mdx
@@ -17,7 +17,7 @@ The merchant management function is designed to provide flexible fund management
 
 Cobo maintains revenue and expenditure records for two types of funds: **merchant funds** and **developer funds**. After a payer completes a payment, the system automatically allocates funds to the corresponding merchant balance and developer balance based on the merchant associated with that payment and its developer fee rate.
 
-<Info>For a more detailed introduction to the fund allocation mechanism, refer to [Funds allocation and balances](/payments/en/guides/amounts-and-balances).</Info>
+<Info>For a more detailed introduction to the fund allocation mechanism, refer to [Accounts and fund allocation](/payments/en/guides/amounts-and-balances).</Info>
 
 
 ```mermaid
@@ -84,7 +84,7 @@ This architecture achieves fund isolation, independent accounting, and refined o
 
 - Create merchants: For specific merchant creation and configuration steps, refer to [Preparation for development environment](/payments/en/guides/preparation#merchants).
 
-- Developer fee rate settings: Different pay-in types have different configuration methods. For detailed instructions on rate configuration and fund flows, refer to [Funds allocation and balances](/payments/en/guides/amounts-and-balances).
+- Developer fee rate settings: Different pay-in types have different configuration methods. For detailed instructions on rate configuration and fund flows, refer to [Accounts and fund allocation](/payments/en/guides/amounts-and-balances).
 
 
 
