--- a/payments/en/guides/overview.mdx
+++ b/payments/en/guides/overview.mdx
@@ -48,7 +48,7 @@ If you are a merchant directly facing end users (such as e-commerce websites, Sa
 If you are a payment service provider (PSP), e-commerce platform, or other institution that needs to provide payment services for downstream merchants, in addition to understanding the regular payment collection, payout processes, and other processes, you also need to perform merchant management and fund settlement operations:
 
 - [Merchant management](/payments/en/guides/merchants): Understand the applicable scenarios, core advantages, and merchant creation and configuration processes of the merchant management function
-- [Funds allocation and balances](/payments/en/guides/amounts-and-balances): Understand the fund allocation rules between merchants and developers, balance calculation methods, and refund processing mechanisms
+- [Accounts and fund allocation](/payments/en/guides/amounts-and-balances): Understand the fund allocation rules between merchants and developers, balance calculation methods, and refund processing mechanisms
 
 
 
