fixed an api error

--- a/payments/en/guides/create-orders.mdx
+++ b/payments/en/guides/create-orders.mdx
@@ -52,10 +52,7 @@ You have completed all the steps mentioned in [Preparation](/payments/en/guides/
 ### Implementation steps
 
 <Tabs>
-  <Tab title="Payment Link" icon="browser">
-  You can call [Create order link](/payments/en/api-references/payment/create-order-link) to create an order payment link. The payment page is provided by Cobo, and users can access the link directly to complete the order payment. You can also embed the page into your existing website through an iFrame. For details, see [Create order link](/payments/en/guides/payment-link).
-  </Tab>
-  <Tab title="Payments API" icon="code">
+  <Tab title="Create order" icon="code">
 
 You can call [Create pay-in order](/payments/en/api-references/payment/create-pay-in-order) to create a payment order.
 
