Added feature overview diagram

--- a/payments/cn/guides/features.mdx
+++ b/payments/cn/guides/features.mdx
@@ -9,7 +9,7 @@ lang: "zh-hans"
 
 以下图表展示了支付解决方案的主要功能模块及其关系：
 
-<img src="/payments/cn/images/payments/feature-overview.png" className="diagram" alt="Cobo 支付解决方案的功能模块及其关系"></img>
+<img src="/payments/cn/images/payments/feature-overview.svg" className="diagram" alt="Cobo 支付解决方案的功能模块及其关系"></img>
 
 
 ## 核心业务功能
